spacing issue on footer

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -110,7 +110,7 @@ header {
   .main-content {
     margin-top: 4rem;
     padding: 0 2rem;
-    min-height: 100vh;
+
     img {
       border-radius: 0.6rem;
     }
